Implemetar funcionalidad de subir imagenes y editar perfil

--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
+
+<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Landing Template</title>
@@ -9,12 +10,12 @@
 	<meta name="keywords" content="" />
 	<meta name="author" content="" />
 
-  <!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
+	<!-- Facebook and Twitter integration -->
+	<meta property="og:title" content="" />
+	<meta property="og:image" content="" />
+	<meta property="og:url" content="" />
+	<meta property="og:site_name" content="" />
+	<meta property="og:description" content="" />
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
@@ -22,7 +23,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,700,900" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="/css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -39,7 +40,7 @@
 	<!-- Owl Carousel -->
 	<link rel="stylesheet" href="/css/owl.carousel.min.css">
 	<link rel="stylesheet" href="/css/owl.theme.default.min.css">
-	
+
 	<!-- Flaticons  -->
 	<link rel="stylesheet" href="/fonts/flaticon/font/flaticon.css">
 
@@ -53,9 +54,10 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
-	</head>
-	<body>
-		
+</head>
+
+<body>
+
 	<div class="colorlib-loader"></div>
 
 	<div id="page">
@@ -77,8 +79,8 @@
 										<li><a href="#">Original Work</a></li>
 									</ul>
 								</li>
-								<li><a href="services.html">Documentacion</a></li>
-								
+								<li><a href="#">Documentacion</a></li>
+
 								<li class="btn-cta"><a href="/register">Registrate</a></li>
 								<li class="btn-cta"><a href="/login">Inicia sesión</a></li>
 							</ul>
@@ -93,8 +95,9 @@
 					<div class="col-md-8 col-md-offset-2 text-center">
 						<div class="intro">
 							<h1>Wall-E el mejor gestor de presupuestos</h1>
-							<p>El dinero ahorrado es un fiel amigo en la adversidad y un positivo colaborador en el aprovechamiento de las oportunidades. -O. S. Marden</p>
-							<p><a href="#" class="btn btn-primary btn-outline btn-md">Comienza ahora</a></p>
+							<p>El dinero ahorrado es un fiel amigo en la adversidad y un positivo colaborador en el
+								aprovechamiento de las oportunidades. -O. S. Marden</p>
+							<p><a href="/register" class="btn btn-primary btn-outline btn-md">Comienza ahora</a></p>
 						</div>
 					</div>
 				</div>
@@ -106,23 +109,23 @@
 					<div class="col-md-12">
 						<div class="flexslider">
 							<ul class="slides">
-						   	<li style="background-image: url(images/img_bg_1.jpg);">
-						   		<div class="overlay"></div>
-						   	</li>
-						   	<li style="background-image: url(images/img_bg_2.jpg);">
-						   		<div class="overlay"></div>
-						   	</li>
-						   	<li style="background-image: url(images/img_bg_3.jpg);">
-						   		<div class="overlay"></div>
-						   	</li>
-						   	<li style="background-image: url(images/img_bg_4.jpg);">
-						   		<div class="overlay"></div>
-						   	</li>	
-						  	</ul>
-					  	</div>
-				  	</div>
-			  	</div>
-		  	</div>
+								<li style="background-image: url(images/img_bg_1.jpg);">
+									<div class="overlay"></div>
+								</li>
+								<li style="background-image: url(images/img_bg_2.jpg);">
+									<div class="overlay"></div>
+								</li>
+								<li style="background-image: url(images/img_bg_3.jpg);">
+									<div class="overlay"></div>
+								</li>
+								<li style="background-image: url(images/img_bg_4.jpg);">
+									<div class="overlay"></div>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
 		</aside>
 
 		<div id="colorlib-services">
@@ -130,7 +133,8 @@
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center colorlib-heading animate-box">
 						<h2>¿Como funciona?</h2>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name</p>
+						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost
+							unorthographic life One day however a small line of blind text by the name</p>
 					</div>
 				</div>
 				<div class="row">
@@ -141,7 +145,8 @@
 							</span>
 							<div class="desc">
 								<h3>User Experienced</h3>
-								<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line</p>
+								<p>Even the all-powerful Pointing has no control about the blind texts it is an almost
+									unorthographic life One day however a small line</p>
 							</div>
 						</div>
 					</div>
@@ -152,7 +157,8 @@
 							</span>
 							<div class="desc">
 								<h3>Virtual Design</h3>
-								<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line</p>
+								<p>Even the all-powerful Pointing has no control about the blind texts it is an almost
+									unorthographic life One day however a small line</p>
 							</div>
 						</div>
 					</div>
@@ -163,8 +169,9 @@
 							</span>
 							<div class="desc">
 								<h3>Design &amp; Research</h3>
-								<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line</p>
-								</div>
+								<p>Even the all-powerful Pointing has no control about the blind texts it is an almost
+									unorthographic life One day however a small line</p>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -172,84 +179,85 @@
 		</div>
 		<div id="colorlib-work">
 			<div class="container-fluid">
-			<div class="row">
-				<div class="col-md-4 no-gutters text-center animate-box">
-					<a href="work.html" class="work-entry" style="background-image: url(images/work-1.jpg);">
-						<div class="desc">
-							<div class="display-t">
-								<div class="display-tc">
-									<span>Illustration</span>
-									<h2>Work Name</h2>
+				<div class="row">
+					<div class="col-md-4 no-gutters text-center animate-box">
+						<a href="work.html" class="work-entry" style="background-image: url(images/work-1.jpg);">
+							<div class="desc">
+								<div class="display-t">
+									<div class="display-tc">
+										<span>Illustration</span>
+										<h2>Work Name</h2>
+									</div>
 								</div>
 							</div>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-4 no-gutters text-center animate-box">
-					<a href="work.html" class="work-entry" style="background-image: url(images/work-2.jpg);">
-						<div class="desc">
-							<div class="display-t">
-								<div class="display-tc">
-									<span>Illustration</span>
-									<h2>Work Name</h2>
+						</a>
+					</div>
+					<div class="col-md-4 no-gutters text-center animate-box">
+						<a href="work.html" class="work-entry" style="background-image: url(images/work-2.jpg);">
+							<div class="desc">
+								<div class="display-t">
+									<div class="display-tc">
+										<span>Illustration</span>
+										<h2>Work Name</h2>
+									</div>
 								</div>
 							</div>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-4 no-gutters text-center animate-box">
-					<a href="work.html" class="work-entry" style="background-image: url(images/work-3.jpg);">
-						<div class="desc">
-							<div class="display-t">
-								<div class="display-tc">
-									<span>Illustration</span>
-									<h2>Work Name</h2>
+						</a>
+					</div>
+					<div class="col-md-4 no-gutters text-center animate-box">
+						<a href="work.html" class="work-entry" style="background-image: url(images/work-3.jpg);">
+							<div class="desc">
+								<div class="display-t">
+									<div class="display-tc">
+										<span>Illustration</span>
+										<h2>Work Name</h2>
+									</div>
 								</div>
 							</div>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-4 no-gutters text-center animate-box">
-					<a href="work.html" class="work-entry" style="background-image: url(images/work-4.jpg);">
-						<div class="desc">
-							<div class="display-t">
-								<div class="display-tc">
-									<span>Illustration</span>
-									<h2>Work Name</h2>
+						</a>
+					</div>
+					<div class="col-md-4 no-gutters text-center animate-box">
+						<a href="work.html" class="work-entry" style="background-image: url(images/work-4.jpg);">
+							<div class="desc">
+								<div class="display-t">
+									<div class="display-tc">
+										<span>Illustration</span>
+										<h2>Work Name</h2>
+									</div>
 								</div>
 							</div>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-4 no-gutters text-center animate-box">
-					<a href="work.html" class="work-entry" style="background-image: url(images/work-5.jpg);">
-						<div class="desc">
-							<div class="display-t">
-								<div class="display-tc">
-									<span>Illustration</span>
-									<h2>Work Name</h2>
+						</a>
+					</div>
+					<div class="col-md-4 no-gutters text-center animate-box">
+						<a href="work.html" class="work-entry" style="background-image: url(images/work-5.jpg);">
+							<div class="desc">
+								<div class="display-t">
+									<div class="display-tc">
+										<span>Illustration</span>
+										<h2>Work Name</h2>
+									</div>
 								</div>
 							</div>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-4 no-gutters text-center animate-box">
-					<a href="work.html" class="work-entry" style="background-image: url(images/work-6.jpg);">
-						<div class="desc">
-							<div class="display-t">
-								<div class="display-tc">
-									<span>Illustration</span>
-									<h2>Work Name</h2>
+						</a>
+					</div>
+					<div class="col-md-4 no-gutters text-center animate-box">
+						<a href="work.html" class="work-entry" style="background-image: url(images/work-6.jpg);">
+							<div class="desc">
+								<div class="display-t">
+									<div class="display-tc">
+										<span>Illustration</span>
+										<h2>Work Name</h2>
+									</div>
 								</div>
 							</div>
-						</div>
-					</a>
+						</a>
+					</div>
 				</div>
-			</div>
 			</div>
 		</div>
 
-		<div id="colorlib-counter" class="colorlib-counters" style="background-image: url(images/cover_img_1.jpg);" data-stellar-background-ratio="0.5">
+		<div id="colorlib-counter" class="colorlib-counters" style="background-image: url(images/cover_img_1.jpg);"
+			data-stellar-background-ratio="0.5">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row">
@@ -263,7 +271,8 @@
 							<div class="counter-entry">
 								<span class="icon"><i class="icon-paperplane"></i></span>
 								<div class="desc">
-									<span class="colorlib-counter js-counter" data-from="0" data-to="37" data-speed="5000" data-refresh-interval="50"></span>
+									<span class="colorlib-counter js-counter" data-from="0" data-to="37"
+										data-speed="5000" data-refresh-interval="50"></span>
 									<span class="colorlib-counter-label">Proyectos</span>
 								</div>
 							</div>
@@ -272,7 +281,8 @@
 							<div class="counter-entry">
 								<span class="icon"><i class="icon-cup"></i></span>
 								<div class="desc">
-									<span class="colorlib-counter js-counter" data-from="0" data-to="786" data-speed="5000" data-refresh-interval="50"></span>
+									<span class="colorlib-counter js-counter" data-from="0" data-to="786"
+										data-speed="5000" data-refresh-interval="50"></span>
 									<span class="colorlib-counter-label">Tazas de cafe</span>
 								</div>
 							</div>
@@ -281,7 +291,8 @@
 							<div class="counter-entry">
 								<span class="icon"><i class="icon-user2"></i></span>
 								<div class="desc">
-									<span class="colorlib-counter js-counter" data-from="0" data-to="54" data-speed="5000" data-refresh-interval="50"></span>
+									<span class="colorlib-counter js-counter" data-from="0" data-to="54"
+										data-speed="5000" data-refresh-interval="50"></span>
 									<span class="colorlib-counter-label">Clases aprovadas</span>
 								</div>
 							</div>
@@ -302,7 +313,8 @@
 										<form class="form-inline qbstp-header-subscribe">
 											<div class="col-three-forth">
 												<div class="form-group">
-													<input type="text" class="form-control" id="email" placeholder="Ingresa tu correo">
+													<input type="text" class="form-control" id="email"
+														placeholder="Ingresa tu correo">
 												</div>
 											</div>
 											<div class="col-one-third">
@@ -331,7 +343,8 @@
 						<p>
 							<ul class="colorlib-social-icons">
 								<li><a href="#"><i class="icon-twitter"></i></a></li>
-								<li><a href="https://www.facebook.com/iccsiguatepeque/"><i class="icon-facebook"></i></a></li>
+								<li><a href="https://www.facebook.com/iccsiguatepeque/"><i
+											class="icon-facebook"></i></a></li>
 								<li><a href="#"><i class="icon-linkedin"></i></a></li>
 								<li><a href="#"><i class="icon-dribbble"></i></a></li>
 							</ul>
@@ -354,8 +367,10 @@
 						<ul class="colorlib-footer-links">
 							<li>Barrio el parnaso, <br> Siguatepeque comayagua</li>
 							<li><a href="tel://1234567920"><i class="icon-phone"></i> + 504 9579-9550</a></li>
-							<li><a href="mailto:info@yoursite.com"><i class="icon-envelope"></i> maynorx5000@gmail.com</a></li>
-							<li><a href="http://www.github.com/PENA98"><i class="icon-location4"></i> www.github.com/PENA98</a></li>
+							<li><a href="mailto:info@yoursite.com"><i class="icon-envelope"></i>
+									maynorx5000@gmail.com</a></li>
+							<li><a href="http://www.github.com/PENA98"><i class="icon-location4"></i>
+									www.github.com/PENA98</a></li>
 						</ul>
 					</div>
 				</div>
@@ -365,10 +380,16 @@
 					<div class="row">
 						<div class="col-md-12 text-center">
 							<p>
-								<small class="block"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart3" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></small><br> 
-								<small class="block">Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a>, <a href="http://pexels.com/" target="_blank">Pexels</a></small>
+								<small class="block">
+									<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+									Copyright &copy;
+									<script>document.write(new Date().getFullYear());</script> All rights reserved |
+									This template is made with <i class="icon-heart3" aria-hidden="true"></i> by <a
+										href="https://colorlib.com" target="_blank">Colorlib</a>
+									<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></small><br>
+								<small class="block">Demo Images: <a href="http://unsplash.co/"
+										target="_blank">Unsplash</a>, <a href="http://pexels.com/"
+										target="_blank">Pexels</a></small>
 							</p>
 						</div>
 					</div>
@@ -380,7 +401,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up2"></i></a>
 	</div>
-	
+
 	<!-- jQuery -->
 	<script src="/js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
@@ -403,6 +424,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 	<!-- Main -->
 	<script src="/js/main2.js"></script>
 
-	</body>
-</html>
+</body>
 
+</html>
