--- a/views/getStarted.handlebars
+++ b/views/getStarted.handlebars
@@ -2,11 +2,17 @@
 
 <div class="row">
   <div id="Started">
-    Empieza a 
+    Empieza a
     <div id="flip">
-      <div><div>CONTROLAR</div></div>
-      <div><div>AHORRAR</div></div>
-      <div><div>¡TRIUNFAR!</div></div>
+      <div>
+        <div>CONTROLAR</div>
+      </div>
+      <div>
+        <div>AHORRAR</div>
+      </div>
+      <div>
+        <div>¡TRIUNFAR!</div>
+      </div>
     </div>
     ¡AHORA!
     <div>
@@ -21,27 +27,30 @@
 
   <div class="col-lg-4"></div>
   <div class="col-lg-4">
-      <form action="/start" method="POST">
-          <div class="form-group">
-            <label for="accountName">Ingresa el nombre de tu primer cuenta</label>
-            <input type="text" autocomplete="off" required="required" class="form-control text-left" id="accountName" name="accountName">
-          </div>
+    <form action="/start" method="POST">
+      <div class="form-group">
+        <label for="accountName">Ingresa el nombre de tu primer cuenta</label>
+        <input type="text" autocomplete="off" required="required" class="form-control text-left" id="accountName"
+          name="accountName">
+      </div>
 
-          <div class="form-group">
-            <label for="salary">Introduzca su salario</label>
-            <h5 class="text-aqua">Esto nos ayudara a brindarle consejos financieros.</h5>
-            <input type="number" autocomplete="off" required="required" class="form-control text-left" id="salary" name="salary" >
-          </div>
+      <div class="form-group">
+        <label for="salary">Introduzca su salario</label>
+        <h5 class="text-aqua">Esto nos ayudara a brindarle consejos financieros.</h5>
+        <input type="number" autocomplete="off" required="required" class="form-control text-left" id="salary"
+          name="salary">
+      </div>
 
-          <div class="form-group">
-            <label for="budget">Establezca un presupuesto mensual.</label>
-            <input type="number" autocomplete="off" required="required" class="form-control text-left" id="budget" name="budget" >
-          </div>
+      <div class="form-group">
+        <label for="budget">Establezca un presupuesto mensual.</label>
+        <input type="number" autocomplete="off" required="required" class="form-control text-left" id="budget"
+          name="budget">
+      </div>
 
-          <div id="bottonStart">    
-              <button type="submit" class="btn btn-block btn-success btn-lg">Comenzar</button>
-          </div>
-      </form>
+      <div id="bottonStart">
+        <button type="submit" class="btn btn-block btn-success btn-lg">Comenzar</button>
+      </div>
+    </form>
 
   </div>
   <div class="col-lg-4"></div>
