Guardar token y enviar email.

--- a/views/layouts/home.handlebars
+++ b/views/layouts/home.handlebars
@@ -934,6 +934,7 @@
   <script src="/toastrJS/toastr.min.js"></script>
   <script src="/js/ChartStart.js"></script>
 	<script src="/js/toastrShow.js"></script>
+  <script src="/js/editData.js"></script>
   
 
 </body>
