--- a/views/transactions.handlebars
+++ b/views/transactions.handlebars
@@ -23,7 +23,7 @@
             <!-- /.box-header -->
             <div class="box-body no-padding">
               <table class="table table-striped">
-                <tbody>
+                <thead class="inEx">
                   <tr>
                     <th style="width: 10px">#</th>
                     <th style="width: 100px">Fecha</th>
@@ -31,11 +31,13 @@
                     <th>Categoria</th>
                     <th>Cuenta</th>
                     <th>Valor</th>
+                    <td style="display:none;">id</td>
                     <th style="width: 20px">Editar</th>
                     <th style="width: 20px">borrar</th>
 
                   </tr>
-
+                </thead>
+                <tbody>
                   {{#tableMaker data}}
                   {{/tableMaker}}
                 </tbody>
@@ -53,7 +55,7 @@
             <!-- /.box-header -->
             <div class="box-body no-padding">
               <table class="table table-striped">
-                <tbody>
+                <thead>
                   <tr>
                     <th style="width: 10px">#</th>
                     <th style="width: 100px">Fecha</th>
@@ -65,6 +67,9 @@
                     <th style="width: 20px">borrar</th>
 
                   </tr>
+                </thead>
+                <tbody>
+
 
                   {{#expenseTableMaker data}}
                   {{/expenseTableMaker}}
@@ -83,7 +88,7 @@
             <!-- /.box-header -->
             <div class="box-body no-padding">
               <table class="table table-striped">
-                <tbody>
+                <thead>
                   <tr>
                     <th style="width: 10px">#</th>
                     <th style="width: 100px">Fecha</th>
@@ -95,6 +100,9 @@
                     <th style="width: 20px">borrar</th>
 
                   </tr>
+
+                </thead>
+                <tbody>
 
                   {{#incomeTableMaker data}}
                   {{/incomeTableMaker}}
@@ -291,4 +299,29 @@
 
 
   </div>
+</div>
+
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content"></div>
+    </div>
+    <div class="modal-dialog">
+        <div class="modal-content"></div>
+    </div>
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"> <span aria-hidden="true" class="">×   </span><span class="sr-only">Close</span>
+
+                </button>
+                 <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+
+            </div>
+            <div class="modal-body"></div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
 </div>
