Editar, eliminar, y revisiones

--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -4,7 +4,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Landing Template</title>
+	<title>Bienvenido a Wall-E
+	</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -21,6 +22,7 @@
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
+	<link rel="icon" type="image/png" href="/img/Wall-E.png" />
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,700,900" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
 
@@ -66,13 +68,13 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-2 text-center">
-							<div id="colorlib-logo"><a href="index.html">Wall-E</a></div>
+							<div id="colorlib-logo"><a href="/">Wall-E</a></div>
 						</div>
 						<div class="col-md-10 text-right menu-1">
 							<ul>
-								<li class="active"><a href="index.html">Inicio</a></li>
+								<li class="active"><a href="/">Inicio</a></li>
 								<li class="has-dropdown">
-									<a href="work.html">Acerca de</a>
+									<a href="#">Acerca de</a>
 									<ul class="dropdown">
 										<li><a href="#">Limited Work</a></li>
 										<li><a href="#">Accessible Work</a></li>
@@ -118,9 +120,6 @@
 								<li style="background-image: url(images/img_bg_3.jpg);">
 									<div class="overlay"></div>
 								</li>
-								<li style="background-image: url(images/img_bg_4.jpg);">
-									<div class="overlay"></div>
-								</li>
 							</ul>
 						</div>
 					</div>
@@ -133,8 +132,7 @@
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center colorlib-heading animate-box">
 						<h2>¿Como funciona?</h2>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-							unorthographic life One day however a small line of blind text by the name</p>
+						<p>Dedica un par de minutos al dia para organizar tus gastos y finanzas.</p>
 					</div>
 				</div>
 				<div class="row">
@@ -144,9 +142,8 @@
 								<i class="icon-lightbulb"></i>
 							</span>
 							<div class="desc">
-								<h3>User Experienced</h3>
-								<p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-									unorthographic life One day however a small line</p>
+								<h3>Manten tus finanzas en mente.</h3>
+								<p>Nunca pierdas de vista un gasto innecesario o un gran ingreso.</p>
 							</div>
 						</div>
 					</div>
@@ -156,9 +153,8 @@
 								<i class="icon-tools"></i>
 							</span>
 							<div class="desc">
-								<h3>Virtual Design</h3>
-								<p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-									unorthographic life One day however a small line</p>
+								<h3>Control sobre todo.</h3>
+								<p>Puedes controlar desde tu presupuesto hasta tarjetas y ahorros.</p>
 							</div>
 						</div>
 					</div>
@@ -168,94 +164,14 @@
 								<i class="icon-monitor"></i>
 							</span>
 							<div class="desc">
-								<h3>Design &amp; Research</h3>
-								<p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-									unorthographic life One day however a small line</p>
+								<h3>Diseño &amp; Simpleza</h3>
+								<p>Diseñado para ser amigable para nuestros usuarios.</p>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div id="colorlib-work">
-			<div class="container-fluid">
-				<div class="row">
-					<div class="col-md-4 no-gutters text-center animate-box">
-						<a href="work.html" class="work-entry" style="background-image: url(images/work-1.jpg);">
-							<div class="desc">
-								<div class="display-t">
-									<div class="display-tc">
-										<span>Illustration</span>
-										<h2>Work Name</h2>
-									</div>
-								</div>
-							</div>
-						</a>
-					</div>
-					<div class="col-md-4 no-gutters text-center animate-box">
-						<a href="work.html" class="work-entry" style="background-image: url(images/work-2.jpg);">
-							<div class="desc">
-								<div class="display-t">
-									<div class="display-tc">
-										<span>Illustration</span>
-										<h2>Work Name</h2>
-									</div>
-								</div>
-							</div>
-						</a>
-					</div>
-					<div class="col-md-4 no-gutters text-center animate-box">
-						<a href="work.html" class="work-entry" style="background-image: url(images/work-3.jpg);">
-							<div class="desc">
-								<div class="display-t">
-									<div class="display-tc">
-										<span>Illustration</span>
-										<h2>Work Name</h2>
-									</div>
-								</div>
-							</div>
-						</a>
-					</div>
-					<div class="col-md-4 no-gutters text-center animate-box">
-						<a href="work.html" class="work-entry" style="background-image: url(images/work-4.jpg);">
-							<div class="desc">
-								<div class="display-t">
-									<div class="display-tc">
-										<span>Illustration</span>
-										<h2>Work Name</h2>
-									</div>
-								</div>
-							</div>
-						</a>
-					</div>
-					<div class="col-md-4 no-gutters text-center animate-box">
-						<a href="work.html" class="work-entry" style="background-image: url(images/work-5.jpg);">
-							<div class="desc">
-								<div class="display-t">
-									<div class="display-tc">
-										<span>Illustration</span>
-										<h2>Work Name</h2>
-									</div>
-								</div>
-							</div>
-						</a>
-					</div>
-					<div class="col-md-4 no-gutters text-center animate-box">
-						<a href="work.html" class="work-entry" style="background-image: url(images/work-6.jpg);">
-							<div class="desc">
-								<div class="display-t">
-									<div class="display-tc">
-										<span>Illustration</span>
-										<h2>Work Name</h2>
-									</div>
-								</div>
-							</div>
-						</a>
-					</div>
-				</div>
-			</div>
-		</div>
-
 		<div id="colorlib-counter" class="colorlib-counters" style="background-image: url(images/cover_img_1.jpg);"
 			data-stellar-background-ratio="0.5">
 			<div class="overlay"></div>
