--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!--===============================================================================================-->
-	<link rel="icon" type="image/png" href="/login/images/icons/favicon.ico" />
+	<link rel="icon" type="image/png" href="/img/Wall-E.png" />
 	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="/login/vendor/bootstrap/css/bootstrap.min.css">
 	<!--===============================================================================================-->
