--- a/views/transactions.handlebars
+++ b/views/transactions.handlebars
@@ -48,7 +48,7 @@
         </div>
         <!-- /.tab-pane -->
         <div class="tab-pane" id="tab_2">
-          <div class="box box-success">
+          <div class="box box-danger">
             <div class="box-header">
               <h3 class="box-title">Resumen de gastos</h3>
             </div>
@@ -301,7 +301,7 @@
   </div>
 </div>
 
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade " id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content"></div>
     </div>
@@ -314,13 +314,13 @@
                 <button type="button" class="close" data-dismiss="modal"> <span aria-hidden="true" class="">×   </span><span class="sr-only">Close</span>
 
                 </button>
-                 <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                 <h4 class="modal-title" id="myModalLabel"><Address>Editar transacción</Address></h4>
 
             </div>
-            <div class="modal-body"></div>
+            <div class="modal-body modal-unique"></div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-block btn-danger btn-lg" data-dismiss="modal">Cerrar</button>
+                <button type="button" class="btn btn-block btn-success btn-lg">Guardar Cambios</button>
             </div>
         </div>
     </div>
