--- a/views/cards.handlebars
+++ b/views/cards.handlebars
@@ -4,5 +4,108 @@
    {{#cardMaker data}}
    {{/cardMaker}}
 
+   <div class="col-lg-4">
+      <div class="box box-danger">
+         <div class="box-header with-border">
+         </div>
 
+         <button id="modalActivator-button" hidden="hidden" data-toggle="modal" data-target="#addCredit"></button>
+
+         <div class="box-body" style="cursor: pointer;" onclick="clickForModal()">
+            <div class="row">
+               <div class="col-lg-12 col-md-12 col-sm-12">
+                  <h6 class="text-center">
+                     <i class="fa fa-plus-square fa-5x"></i>
+                  </h6>
+
+               </div>
+            </div>
+            <div class="row">
+               <div class="col-lg-12">
+                  <h3 class="text-center">crear tarjeta</h3>
+               </div>
+            </div>
+
+         </div>
+
+
+      </div>
+   </div>
 </div>
+
+
+
+<!-- MODAL -->
+
+  <!-- line modal -->
+  <div class="modal fade bd-example-modal-lg" id="addCredit" tabindex="-1" role="dialog" aria-labelledby="modalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span
+              class="sr-only">Close</span></button>
+          <h3 class="modal-title" id="lineModalLabel">Nueva tarjeta</h3>
+        </div>
+        <div class="modal-body">
+
+          <!-- content goes here -->
+          <form action='/add_card/:{{actualURL}}' method="POST">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="NameCard">Nombre</label>
+                  <input type="text" autocomplete="off" placeholder="nombre de la tarjeta"
+                    class="form-control text-left" id="NameCard" name="nameCard">
+                </div>
+                <!-- /input-group -->
+              </div>
+              <!-- /.col-lg-6 -->
+              <div class="col-md-6">
+
+                <div class="form-group">
+                  <label for="date">Fecha de pago</label>
+                  <div class="input-group date">
+                    <div class="input-group-addon">
+                      <i class="fa fa-calendar"></i>
+                    </div>
+                    <input type="text" autocomplete="off" name="date" class="form-control pull-right dateselect"
+                      id="datepicker" required="required">
+                  </div>
+                  <!-- /.input group -->
+                </div>
+
+                <!-- /.col-lg-6 -->
+              </div>
+
+              <!-- /.input group -->
+            </div>
+
+            <div class="form-group">
+              <label>Limite</label>
+              <input type="Number" autocomplete="off" name="limit" class="form-control"
+                placeholder="Ingrese el limite de su tarjeta">
+            </div>
+
+
+            <button type="submit" hidden="hidden" id="addCreditCard-button"></button>
+
+          </form>
+
+        </div>
+
+        <div class="modal-footer">
+          <div class="btn-group btn-group-justified" role="group" aria-label="group button">
+            <div class="btn-group" role="group">
+              <button type="button" class="btn btn-block btn-danger btn-lg">Cerrar</button>
+            </div>
+            <div class="btn-group" role="group">
+              <button class="btn btn-block btn-success btn-lg" onclick="addCreditCard()">Guardar</button>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+  <!--/MODAL-->
