--- a/views/layouts/home.handlebars
+++ b/views/layouts/home.handlebars
@@ -14,6 +14,7 @@
 
   <!-- Bootstrap 3.3.7 -->
   <link rel="stylesheet" href="/templates/bower_components/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="icon" type="image/png" href="/img/Wall-E.png" />
   <!-- Font Awesome -->
   <link rel="stylesheet" href="/templates/bower_components/font-awesome/css/font-awesome.min.css">
   <!-- Ionicons -->
@@ -41,6 +42,7 @@
   <link rel="stylesheet" href="/date/date.css">
 
   <link rel="stylesheet" href="/toastrJS/toastr.min.css">
+  
   
 
 
@@ -81,87 +83,8 @@
 
         <div class="navbar-custom-menu">
           <ul class="nav navbar-nav">
-            <li class="dropdown tasks-menu">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                <i class="fa fa-flag-o"></i>
-                <span class="label label-danger">9</span>
-              </a>
-              <ul class="dropdown-menu">
-                <li class="header">You have 9 tasks</li>
-                <li>
-                  <!-- inner menu: contains the actual data -->
-                  <ul class="menu">
-                    <li>
-                      <!-- Task item -->
-                      <a href="#">
-                        <h3>
-                          Design some buttons
-                          <small class="pull-right">20%</small>
-                        </h3>
-                        <div class="progress xs">
-                          <div class="progress-bar progress-bar-aqua" style="width: 20%" role="progressbar"
-                            aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-                            <span class="sr-only">20% Complete</span>
-                          </div>
-                        </div>
-                      </a>
-                    </li>
-                    <!-- end task item -->
-                    <li>
-                      <!-- Task item -->
-                      <a href="#">
-                        <h3>
-                          Create a nice theme
-                          <small class="pull-right">40%</small>
-                        </h3>
-                        <div class="progress xs">
-                          <div class="progress-bar progress-bar-green" style="width: 40%" role="progressbar"
-                            aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-                            <span class="sr-only">40% Complete</span>
-                          </div>
-                        </div>
-                      </a>
-                    </li>
-                    <!-- end task item -->
-                    <li>
-                      <!-- Task item -->
-                      <a href="#">
-                        <h3>
-                          Some task I need to do
-                          <small class="pull-right">60%</small>
-                        </h3>
-                        <div class="progress xs">
-                          <div class="progress-bar progress-bar-red" style="width: 60%" role="progressbar"
-                            aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-                            <span class="sr-only">60% Complete</span>
-                          </div>
-                        </div>
-                      </a>
-                    </li>
-                    <!-- end task item -->
-                    <li>
-                      <!-- Task item -->
-                      <a href="#">
-                        <h3>
-                          Make beautiful transitions
-                          <small class="pull-right">80%</small>
-                        </h3>
-                        <div class="progress xs">
-                          <div class="progress-bar progress-bar-yellow" style="width: 80%" role="progressbar"
-                            aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-                            <span class="sr-only">80% Complete</span>
-                          </div>
-                        </div>
-                      </a>
-                    </li>
-                    <!-- end task item -->
-                  </ul>
-                </li>
-                <li class="footer">
-                  <a href="#">View all tasks</a>
-                </li>
-              </ul>
-            </li>
+            {{#miniSaveMaker data}}
+            {{/miniSaveMaker}}
             <!-- User Account: style can be found in dropdown.less -->
             <li class="dropdown user user-menu">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -208,7 +131,7 @@
           </div>
         </div>
         <!-- sidebar menu: : style can be found in sidebar.less -->
-        <ul class="sidebar-menu" data-widget="tree">
+        <ul class="sidebar-menu actswt" data-widget="tree">
           <li class="header">Navegación principal</li>
           <li class="active treeview">
             <a href="#">
@@ -436,7 +359,7 @@
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span
               class="sr-only">Close</span></button>
-          <h3 class="modal-title" id="lineModalLabel">Nuevo Ingreso</h3>
+          <h3 class="modal-title" id="lineModalLabel">Nuevo tarjeta</h3>
         </div>
         <div class="modal-body">
 
@@ -514,7 +437,7 @@
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span
               class="sr-only">Close</span></button>
-          <h3 class="modal-title" id="lineModalLabel">Nuevo Ingreso</h3>
+          <h3 class="modal-title" id="lineModalLabel">Nuevo ahorro</h3>
         </div>
         <div class="modal-body">
 
@@ -582,7 +505,7 @@
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span
               class="sr-only">Close</span></button>
-          <h3 class="modal-title" id="lineModalLabel">Nuevo Gasto</h3>
+          <h3 class="modal-title" id="lineModalLabel">Nuevo gasto</h3>
         </div>
         <div class="modal-body">
 
@@ -682,7 +605,7 @@
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span
               class="sr-only">Close</span></button>
-          <h3 class="modal-title" id="lineModalLabel">Nuevo Ingreso</h3>
+          <h3 class="modal-title" id="lineModalLabel">Nuevo gasto de tarjeta</h3>
         </div>
         <div class="modal-body">
 
@@ -725,10 +648,6 @@
               <button type="button" class="btn btn-block btn-danger btn-lg">Cerrar</button>
             </div>
             <div class="btn-group" role="group">
-              <button data-toggle="modal" data-target="#addCredit" data-dismiss="modal" type="button"
-                class="btn btn-block btn-info btn-lg">Crear tarjeta</button>
-            </div>
-            <div class="btn-group" role="group">
               <button class="btn btn-block btn-success btn-lg" onclick="addCard()">Guardar</button>
             </div>
           </div>
@@ -752,7 +671,7 @@
             </div>
             <div class="col-md-6">
               <h1 class="text-center"><strong>¡Ops!</strong></h1>
-              <h3 class="text-center">No tienes ninguna tarjeta aun puedes crear una a continuación.</h3>
+              <h3 class="text-center">No tienes ninguna tarjeta creada aun, puedes crear una a continuación.</h3>
             </div>
           </div>
         </div>
@@ -828,10 +747,6 @@
           <div class="btn-group btn-group-justified" role="group" aria-label="group button">
             <div class="btn-group" role="group">
               <button type="button" class="btn btn-block btn-danger btn-lg">Cerrar</button>
-            </div>
-            <div class="btn-group" role="group">
-              <button data-toggle="modal" data-target="#addSaving" data-dismiss="modal" type="button"
-                class="btn btn-block btn-info btn-lg">Crear ahorro</button>
             </div>
             <div class="btn-group" role="group">
               <button class="btn btn-block btn-success btn-lg" onclick="addSaving()">Guardar</button>
@@ -933,8 +848,9 @@
   <script src="/js/Chart.bundle.js"></script>
   <script src="/toastrJS/toastr.min.js"></script>
   <script src="/js/ChartStart.js"></script>
-	<script src="/js/toastrShow.js"></script>
   <script src="/js/editData.js"></script>
+  <script src="/toastrJS/toastr.min.js"></script>
+	<script src="/js/toastrShow.js"></script>
   
 
 </body>
