--- a/views/newPassword.handlebars
+++ b/views/newPassword.handlebars
@@ -32,19 +32,26 @@
 
                 <div></div>
 
-                <form action="/reset_password" class="login100-form validate-form" method="POST">
+                <form class="login100-form validate-form" method="POST">
                     <span class="login100-form-title">
-                        Ingresa tu direccion de correo electrónico
+                        Nueva contraseña
                     </span>
 
 
 
-                    <div class="wrap-input100 validate-input"
-                        data-validate="Un correo valido es requerido, ejemplo: ex@abc.xyz">
-                        <input class="input100" type="text" name="email" placeholder="Correo">
+                    <div class="wrap-input100 validate-input">
+                        <input class="input100" type="password" name="password" placeholder="******">
                         <span class="focus-input100"></span>
                         <span class="symbol-input100">
-                            <i class="fa fa-envelope" aria-hidden="true"></i>
+                            <i class="fa fa-lock" aria-hidden="true"></i>
+                        </span>
+                    </div>
+
+                    <div class="wrap-input100 validate-input">
+                        <input class="input100" type="password" name="confirm_password" placeholder="******">
+                        <span class="focus-input100"></span>
+                        <span class="symbol-input100">
+                            <i class="fa fa-lock" aria-hidden="true"></i>
                         </span>
                     </div>
 
