--- a/views/layouts/home.handlebars
+++ b/views/layouts/home.handlebars
@@ -83,8 +83,8 @@
 
         <div class="navbar-custom-menu">
           <ul class="nav navbar-nav">
-            {{#miniSaveMaker data}}
-            {{/miniSaveMaker}}
+            {{#miniSaveMaker1 data}}
+            {{/miniSaveMaker1}}
             <!-- User Account: style can be found in dropdown.less -->
             <li class="dropdown user user-menu">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
